added saving kit

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <input type="checkbox" name="items" value="food"> Food<br>
             <input type="checkbox" name="items" value="radio"> Portable Radio<br>
             <input type="checkbox" name="items" value="flashlight"> Flashlight<br>
-            <input type="checkbox" name="items" value="firstAid"> First Aid Kit<br>
+            <input type="checkbox" name="items" value="firstaidkit"> First Aid Kit<br>
             <input type="checkbox" name="items" value="batteries"> Extra Batteries<br>
             <input type="checkbox" name="items" value="whistle"> Whistle<br>
             <input type="checkbox" name="items" value="mask"> Dust Mask<br>
@@ -101,7 +101,7 @@
             <input type="checkbox" name="items" value="phoneBattery"> Backup Phone Battery<br>  
             
             <br><br>
-            <input id = "submit" class="btn" type="button" value="Update">
+            <input id = "submit" class="btn" type="button" value="Update" onclick="setKit()">
         </form>
         </div>
         
