added recall of saved kit

--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
         
         <div id="myKit" class="d-none">
           <form id="items">
-            <input type="checkbox" name="items" value="water"> Water<br>
-            <input type="checkbox" name="items" value="food"> Food<br>
-            <input type="checkbox" name="items" value="radio"> Portable Radio<br>
-            <input type="checkbox" name="items" value="flashlight"> Flashlight<br>
-            <input type="checkbox" name="items" value="firstaidkit"> First Aid Kit<br>
-            <input type="checkbox" name="items" value="batteries"> Extra Batteries<br>
-            <input type="checkbox" name="items" value="whistle"> Whistle<br>
-            <input type="checkbox" name="items" value="mask"> Dust Mask<br>
-            <input type="checkbox" name="items" value="towel"> Moist Towelettes<br>
-            <input type="checkbox" name="items" value="bags"> Garbage Bags and Plastic Ties<br>
-            <input type="checkbox" name="items" value="tools"> Wrench or Pliers <br>
-            <input type="checkbox" name="items" value="maps"> Local Maps<br>  
-            <input type="checkbox" name="items" value="charger"> Cell Phone Charger<br>  
-            <input type="checkbox" name="items" value="phoneBattery"> Backup Phone Battery<br>  
+            <input type="checkbox" name="items" value="water" id="waterCheck"> Water<br>
+            <input type="checkbox" name="items" value="food" id="foodCheck"> Food<br>
+            <input type="checkbox" name="items" value="radio" id="radioCheck"> Portable Radio<br>
+            <input type="checkbox" name="items" value="flashlight" id="flashlightCheck"> Flashlight<br>
+            <input type="checkbox" name="items" value="firstaidkit" id="firstaidkitCheck"> First Aid Kit<br>
+            <input type="checkbox" name="items" value="batteries" id="batteriesCheck"> Extra Batteries<br>
+            <input type="checkbox" name="items" value="whistle" id="whistleCheck"> Whistle<br>
+            <input type="checkbox" name="items" value="mask" id="maskCheck"> Dust Mask<br>
+            <input type="checkbox" name="items" value="towel" id="towelCheck"> Moist Towelettes<br>
+            <input type="checkbox" name="items" value="bags" id="bagsCheck"> Garbage Bags and Plastic Ties<br>
+            <input type="checkbox" name="items" value="tools" id="toolsCheck"> Wrench or Pliers <br>
+            <input type="checkbox" name="items" value="maps" id="mapsCheck"> Local Maps<br>  
+            <input type="checkbox" name="items" value="charger" id="chargerCheck"> Cell Phone Charger<br>  
+            <input type="checkbox" name="items" value="phoneBattery" id="phoneBatteryCheck"> Backup Phone Battery<br>  
             
             <br><br>
             <input id = "submit" class="btn" type="button" value="Update" onclick="setKit()">
