--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         </div>
         
         <div id="myKit" class="d-none">
+          <div id="kitUpdateMsg" class="alert alert-success d-none">
+            <strong>Success:</strong> Kit Updated Successfully
+          </div>
           <form id="items">
             <input type="checkbox" name="items" value="water" id="waterCheck"> Water<br>
             <input type="checkbox" name="items" value="food" id="foodCheck"> Food<br>
