gave map location data, set up backbone for database interaction

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
         <div id="disasterMap" class="d-none">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="map.php" style="border: 1px solid #ccc"></iframe>
+            <iframe class="embed-responsive-item" src="map/map.php" style="border: 1px solid #ccc"></iframe>
           </div>
         </div>
         
