added ability to remove from kit

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div id="kitUpdateMsg" class="alert alert-success d-none">
             <strong>Success:</strong> Kit Updated Successfully
           </div>
-          <form id="items">
+          <form id="itemsForm">
             <input type="checkbox" name="items" value="water" id="waterCheck"> Water<br>
             <input type="checkbox" name="items" value="food" id="foodCheck"> Food<br>
             <input type="checkbox" name="items" value="radio" id="radioCheck"> Portable Radio<br>
