--- a/index.html
+++ b/index.html
@@ -155,9 +155,14 @@
                 </button>
               </div>
               <div class="modal-body">
+                <div id="signupPasswordMismatch" class="alert alert-danger d-none">
+                  <strong>Error:</strong> Password Does Not Match
+                </div>
                 <form>
                   Username: <input type="text" id="signUpUsername" name="username"></input></span><br /><br />
-                  Password: <input type="password" id="signUpPassword" name="password"></input> <br /><br />
+                  Password: <input type="password" id="signUpPassword1" name="password1"></input> <br /><br />
+                  Retype Password: <input type="password" id="signUpPassword2" name="password2"></input> <br /><br />
+                  Email Address: <input type="text" id="signUpEmail" name="email"></input></span><br /><br />
                 </form>
               </div>
               <div class="modal-footer">
